modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <section id="add-listing">
             <h2>Add a Listing</h2>
-            <input type="text" id="listing-title" placeholder="Item Title">
-            <input type="number" id="listing-price" placeholder="Price">
-            <button id="add-listing-btn">Add Listing</button>
+            <input type="text" id="listing-title" placeholder="Item Title" tabindex="0">
+            <input type="number" id="listing-price" placeholder="Price" tabindex="0">
+            <button id="add-listing-btn" tabindex="0">Add Listing</button>
         </section>
     </main>
 
