--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <main>
         <section id="listings">
             <h2>Available Listings</h2>
-            <div id="listing-container" class="listings-grid"></div>
+            <div id="listing-container"></div>
         </section>
 
         <section id="add-listing">
             <h2>Add a Listing</h2>
-            <input type="text" id="listing-title" placeholder="Item Title" tabindex="0">
-            <input type="number" id="listing-price" placeholder="Price" tabindex="0">
-            <button id="add-listing-btn" tabindex="0">Add Listing</button>
+            <input type="text" id="listing-title" placeholder="Item Title">
+            <input type="number" id="listing-price" placeholder="Price">
+            <button id="add-listing-btn">Add Listing</button>
         </section>
     </main>
 
