--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Marketplace</title>
+    <title>Advanced Local Marketplace</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="script.js"></script>
 </head>
 <body>
     <header>
         <h1>Campus Marketplace</h1>
-        <div class="auth-buttons">
-            <button id="google-login">Login with Google</button>
-            <button id="logout" style="display: none;">Logout</button>
-        </div>
     </header>
 
     <main>
-        <section id="user-info" style="display: none;">
-            <h2>Welcome, <span id="user-name"></span></h2>
-            <img id="user-photo" src="" alt="User Photo">
-        </section>
-
-        <section id="add-listing">
-            <h2>Add a New Listing</h2>
-            <div class="input-group">
-                <input type="text" id="listing-title" placeholder="Item Name">
-                <input type="number" id="listing-price" placeholder="Price">
-                <button id="add-listing-btn">Add Listing</button>
-            </div>
-        </section>
-
+        <div class="actions-container">
+            <input type="search" id="search-bar" placeholder="🔍 Search for items...">
+            <button id="show-add-listing-modal-btn">+ Add New Listing</button>
+        </div>
         <section id="listings">
-            <h2>Available Listings</h2>
-            <div id="listing-container" class="listings-grid"></div>
+            <div id="listing-container" class="listings-grid">
+                </div>
         </section>
     </main>
+
+    <div id="add-listing-modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2>Add a New Listing</h2>
+            <form id="add-listing-form" class="input-group">
+                <input type="text" id="listing-title" placeholder="Item Name" required>
+                <textarea id="listing-description" placeholder="Item Description..." required></textarea>
+                <input type="number" id="listing-price" placeholder="Price ($)" min="0" required>
+                <label for="listing-image">Upload Image (Optional)</label>
+                <input type="file" id="listing-image" accept="image/*">
+                <button type="submit" id="add-listing-btn">Add Listing</button>
+            </form>
+        </div>
+    </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
